# valai

./: .env.example  .gitignore  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
config/: router.yaml
config/agents/: calendar_agent.yaml  code_agent.yaml  email_agent.yaml  file_agent.yaml  generalist_agent.yaml  knowledge_agent.yaml  note_agent.yaml  rag_agent.yaml  search_agent.yaml  system_agent.yaml  todo_agent.yaml  webscraping_agent.yaml  writing_agent.yaml
config/unused/: synthesizer_agent.yaml  todo_agent.yaml  user_profile.yaml  user_profile_agent.yaml
src/valai/: app.py  chainlit_app.py  cli.py  config.py  main.py
src/valai/agents/: base.py
src/valai/core/: assistant.py  console.py  history.py  llm_factory.py  rag_pipeline.py  route.py  tool_registry.py
src/valai/core/rag/: rag_pipeline.py
src/valai/tools/: calendar_tools.py  code_tools.py  email_tools.py  file_tools.py  knowledge_tools.py  note_tools.py  search_tools.py  system_tools.py  todo_tools.py  webscraping_tools.py  writing_tools.py
